Kanji and hiragana displays in white text over white background. Will change soon.

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,12 +16,22 @@
         android:layout_height="0dp"
         android:layout_weight="1" >
 
-        <ListView
+        <ScrollView
             android:id="@+id/wordList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1" >
-        </ListView>
+
+            <TableLayout
+                android:id="@+id/viewTable"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1" >
+
+            </TableLayout>
+
+        </ScrollView>
     </TableRow>
 
     <TableRow
