UI works, translation shows onclick

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,16 +20,17 @@
             android:id="@+id/wordList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
             android:layout_weight="1" >
-
-            <TableLayout
-                android:id="@+id/viewTable"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="1" >
-
-            </TableLayout>
+	            
+	            <TableLayout
+	                android:id="@+id/viewTable"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_gravity="center_horizontal"
+	                android:layout_weight="1" >
+	
+	            </TableLayout>
 
         </ScrollView>
     </TableRow>
