Completed UI, webscraping, and icon. Ready for google play.

--- a/res/layout/list_row.xml
+++ b/res/layout/list_row.xml
@@ -12,6 +12,19 @@
         android:padding="7dp">
 
         <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" >
+
+            <TextView
+                android:id="@+id/number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" >
@@ -22,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="Large Text"
-                android:textSize="20sp"
+                android:textSize="40sp"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
         </FrameLayout>
