--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/table"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -14,7 +15,7 @@
         android:id="@+id/wordRow"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" >
+        android:layout_weight="1" > 
 
         <ScrollView
             android:id="@+id/wordList"
@@ -22,29 +23,27 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1" >
-	            
-	            <TableLayout
-	                android:id="@+id/viewTable"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_gravity="center_horizontal"
-	                android:layout_weight="1" >
-	
-	            </TableLayout>
 
+            <TableLayout
+                android:id="@+id/viewTable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1" >
+            </TableLayout>
         </ScrollView>
     </TableRow>
 
     <TableRow
         android:id="@+id/buttonRow"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" >
+        android:layout_height="wrap_content" >
 
         <Button
             android:id="@+id/moreWords"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:layout_weight="1"
             android:text="More Words" />
     </TableRow>
